tests/baselines/reference/annotationDeclarationFieldTypeError13.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError13.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'null'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError13.ets (1 errors) ====
    @interface Anno {
        a: null
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'null'.
    }